--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,137 @@
 ---
 ---
 
+@article{wang2023interactive,
+  title={Interactive natural language processing},
+  author={Wang, Zekun and Zhang, Ge and Yang, Kexin and Shi, Ning and Zhou, Wangchunshu and Hao, Shaochun and Xiong, Guangzheng and Li, Yizhi and Sim, Mong Yuan and Chen, Xiuying and others},
+  journal={arXiv preprint arXiv:2305.13246},
+  year={2023}
+}
+
+@article{zhang2023don,
+  title={Don't Trust GPT When Your Question Is Not In English},
+  author={Zhang, Xiang and Li, Senyu and Hauer, Bradley and Shi, Ning and Kondrak, Grzegorz},
+  journal={arXiv preprint arXiv:2305.16339},
+  year={2023}
+}
+
+@article{chen2023adversarial,
+  title={From adversarial arms race to model-centric evaluation: Motivating a unified automatic robustness evaluation framework},
+  author={Chen, Yangyi and Gao, Hongcheng and Cui, Ganqu and Yuan, Lifan and Kong, Dehan and Wu, Hanlu and Shi, Ning and Yuan, Bo and Huang, Longtao and Xue, Hui and others},
+  journal={arXiv preprint arXiv:2305.18503},
+  year={2023}
+}
+
+@article{ogezi2023ualberta,
+  title={UAlberta at SemEval-2023 Task 1: Context Augmentation and Translation for Multilingual Visual Word Sense Disambiguation},
+  author={Ogezi, Michael and Hauer, Bradley and Omarov, Talgat and Shi, Ning and Kondrak, Grzegorz},
+  journal={arXiv preprint arXiv:2306.14067},
+  year={2023}
+}
+
+@inproceedings{zhang-etal-2023-bridging,
+    title = "Bridging the Gap Between {B}abel{N}et and {H}ow{N}et: Unsupervised Sense Alignment and Sememe Prediction",
+    author = "Zhang, Xiang  and
+      Shi, Ning  and
+      Hauer, Bradley  and
+      Kondrak, Grzegorz",
+    booktitle = "Proceedings of the 17th Conference of the European Chapter of the Association for Computational Linguistics",
+    month = may,
+    year = "2023",
+    address = "Dubrovnik, Croatia",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2023.eacl-main.205",
+    pages = "2789--2798",
+    abstract = "As the minimum semantic units of natural languages, sememes can provide precise representations of concepts. Despite the widespread utilization of lexical resources for semantic tasks, use of sememes is limited by a lack of available sememe knowledge bases. Recent efforts have been made to connect BabelNet with HowNet by automating sememe prediction. However, these methods depend on large manually annotated datasets. We propose to use sense alignment via a novel unsupervised and explainable method. Our method consists of four stages, each relaxing predefined constraints until a complete alignment of BabelNet synsets to HowNet senses is achieved. Experimental results demonstrate the superiority of our unsupervised method over previous supervised ones by an improvement of 12{\%} overall F1 score, setting a new state of the art. Our work is grounded in an interpretable propagation of sememe information between lexical resources, and may benefit downstream applications which can incorporate sememe information.",
+}
+
+@inproceedings{shi-etal-2022-revisit,
+    title = "Revisit Systematic Generalization via Meaningful Learning",
+    author = "Shi, Ning  and
+      Wang, Boxin  and
+      Wang, Wei  and
+      Liu, Xiangyu  and
+      Lin, Zhouhan",
+    booktitle = "Proceedings of the Fifth BlackboxNLP Workshop on Analyzing and Interpreting Neural Networks for NLP",
+    month = dec,
+    year = "2022",
+    address = "Abu Dhabi, United Arab Emirates (Hybrid)",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2022.blackboxnlp-1.6",
+    pages = "62--79",
+    abstract = "Humans can systematically generalize to novel compositions of existing concepts. Recent studies argue that neural networks appear inherently ineffective in such cognitive capacity, leading to a pessimistic view and a lack of attention to optimistic results. We revisit this controversial topic from the perspective of meaningful learning, an exceptional capability of humans to learn novel concepts by connecting them with known ones. We reassess the compositional skills of sequence-to-sequence models conditioned on the semantic links between new and old concepts. Our observations suggest that models can successfully one-shot generalize to novel concepts and compositions through semantic linking, either inductively or deductively. We demonstrate that prior knowledge plays a key role as well. In addition to synthetic tests, we further conduct proof-of-concept experiments in machine translation and semantic parsing, showing the benefits of meaningful learning in applications. We hope our positive findings will encourage excavating modern neural networks{'} potential in systematic generalization through more advanced learning schemes.",
+}
+
+@inproceedings{shi-etal-2022-text,
+    title = "Text Editing as Imitation Game",
+    author = "Shi, Ning  and
+      Tang, Bin  and
+      Yuan, Bo  and
+      Huang, Longtao  and
+      Pu, Yewen  and
+      Fu, Jie  and
+      Lin, Zhouhan",
+    booktitle = "Findings of the Association for Computational Linguistics: EMNLP 2022",
+    month = dec,
+    year = "2022",
+    address = "Abu Dhabi, United Arab Emirates",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2022.findings-emnlp.114",
+    pages = "1583--1594",
+    abstract = "Text editing, such as grammatical error correction, arises naturally from imperfect textual data. Recent works frame text editing as a multi-round sequence tagging task, where operations {--} such as insertion and substitution {--} are represented as a sequence of tags. While achieving good results, this encoding is limited in flexibility as all actions are bound to token-level tags. In this work, we reformulate text editing as an imitation game using behavioral cloning. Specifically, we convert conventional sequence-to-sequence data into state-to-action demonstrations, where the action space can be as flexible as needed. Instead of generating the actions one at a time, we introduce a dual decoders structure to parallel the decoding while retaining the dependencies between action tokens, coupled with trajectory augmentation to alleviate the distribution shift that imitation learning often suffers. In experiments on a suite of Arithmetic Equation benchmarks, our model consistently outperforms the autoregressive baselines in terms of performance, efficiency, and robustness. We hope our findings will shed light on future studies in reinforcement learning applying sequence-level action generation to natural language processing.",
+}
+
+@inproceedings{zhang-etal-2022-rochbert,
+    title = "{R}o{C}h{B}ert: Towards Robust {BERT} Fine-tuning for {C}hinese",
+    author = "Zhang, Zihan  and
+      Li, Jinfeng  and
+      Shi, Ning  and
+      Yuan, Bo  and
+      Liu, Xiangyu  and
+      Zhang, Rong  and
+      Xue, Hui  and
+      Sun, Donghong  and
+      Zhang, Chao",
+    booktitle = "Findings of the Association for Computational Linguistics: EMNLP 2022",
+    month = dec,
+    year = "2022",
+    address = "Abu Dhabi, United Arab Emirates",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2022.findings-emnlp.256",
+    pages = "3502--3516",
+    abstract = "Despite of the superb performance on a wide range of tasks, pre-trained language models (e.g., BERT) have been proved vulnerable to adversarial texts. In this paper, we present RoChBERT, a framework to build more Robust BERT-based models by utilizing a more comprehensive adversarial graph to fuse Chinese phonetic and glyph features into pre-trained representations during fine-tuning. Inspired by curriculum learning, we further propose to augment the training dataset with adversarial texts in combination with intermediate samples. Extensive experiments demonstrate that RoChBERT outperforms previous methods in significant ways: (i) robust {--} RoChBERT greatly improves the model robustness without sacrificing accuracy on benign texts. Specifically, the defense lowers the success rates of unlimited and limited attacks by 59.43{\%} and 39.33{\%} respectively, while remaining accuracy of 93.30{\%}; (ii) flexible {--} RoChBERT can easily extend to various language models to solve different downstream tasks with excellent performance; and (iii) efficient {--} RoChBERT can be directly applied to the fine-tuning stage without pre-training language model from scratch, and the proposed data augmentation method is also low-cost.",
+}
+
+@inproceedings{wang-etal-2021-counterfactual-adversarial,
+    title = "Counterfactual Adversarial Learning with Representation Interpolation",
+    author = "Wang, Wei  and
+      Wang, Boxin  and
+      Shi, Ning  and
+      Li, Jinfeng  and
+      Zhu, Bingyu  and
+      Liu, Xiangyu  and
+      Zhang, Rong",
+    booktitle = "Findings of the Association for Computational Linguistics: EMNLP 2021",
+    month = nov,
+    year = "2021",
+    address = "Punta Cana, Dominican Republic",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2021.findings-emnlp.413",
+    doi = "10.18653/v1/2021.findings-emnlp.413",
+    pages = "4809--4820",
+    abstract = "Deep learning models exhibit a preference for statistical fitting over logical reasoning. Spurious correlations might be memorized when there exists statistical bias in training data, which severely limits the model performance especially in small data scenarios. In this work, we introduce Counterfactual Adversarial Training framework (CAT) to tackle the problem from a causality perspective. Particularly, for a specific sample, CAT first generates a counterfactual representation through latent space interpolation in an adversarial manner, and then performs Counterfactual Risk Minimization (CRM) on each original-counterfactual pair to adjust sample-wise loss weight dynamically, which encourages the model to explore the true causal effect. Extensive experiments demonstrate that CAT achieves substantial performance improvement over SOTA across different downstream tasks, including sentence classification, natural language inference and question answering.",
+}
+
+
+@inproceedings{shi21_interspeech,
+  author={Ning Shi and Wei Wang and Boxin Wang and Jinfeng Li and Xiangyu Liu and Zhouhan Lin},
+  title={{Incorporating External POS Tagger for Punctuation Restoration}},
+  year=2021,
+  booktitle={Proc. Interspeech 2021},
+  pages={1987--1991},
+  doi={10.21437/Interspeech.2021-1708}
+}
+
 @inproceedings{shi-etal-2020-recurrent,
     title = "Recurrent Inference in Text Editing",
     author = "Shi, Ning  and
