--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,18 @@
 ---
 ---
 
-@article{wang2023interactive,
-  title={Interactive natural language processing},
-  author={Wang, Zekun and Zhang, Ge and Yang, Kexin and Shi, Ning and Zhou, Wangchunshu and Hao, Shaochun and Xiong, Guangzheng and Li, Yizhi and Sim, Mong Yuan and Chen, Xiuying and others},
-  journal={arXiv preprint arXiv:2305.13246},
-  year={2023}
+@article{wang2023interactive, 
+  selected=true, 
+  abbr={arXiv}, 
+  bibtex_show={true}, 
+  title={Interactive natural language processing}, 
+  author={Wang, Zekun and Zhang, Ge and Yang, Kexin and Shi, Ning and Zhou, Wangchunshu and Hao, Shaochun and Xiong, Guangzheng and Li, Yizhi and Sim, Mong Yuan and Chen, Xiuying and others}, 
+  journal={arXiv preprint arXiv:2305.13246}, 
+  year={2023}, 
+  url={https://arxiv.org/abs/2305.13246}, 
+  pdf={https://arxiv.org/pdf/2305.13246.pdf}, 
+  code="https://github.com/InteractiveNLP-Team/awesome-InteractiveNLP-papers", 
+  abstract="Interactive Natural Language Processing (iNLP) has emerged as a novel paradigm within the field of NLP, aimed at addressing limitations in existing frameworks while aligning with the ultimate goals of artificial intelligence. This paradigm considers language models as agents capable of observing, acting, and receiving feedback iteratively from external entities. Specifically, language models in this context can: (1) interact with humans for better understanding and addressing user needs, personalizing responses, aligning with human values, and improving the overall user experience; (2) interact with knowledge bases for enriching language representations with factual knowledge, enhancing the contextual relevance of responses, and dynamically leveraging external information to generate more accurate and informed responses; (3) interact with models and tools for effectively decomposing and addressing complex tasks, leveraging specialized expertise for specific subtasks, and fostering the simulation of social behaviors; and (4) interact with environments for learning grounded representations of language, and effectively tackling embodied tasks such as reasoning, planning, and decision-making in response to environmental observations. This paper offers a comprehensive survey of iNLP, starting by proposing a unified definition and framework of the concept. We then provide a systematic classification of iNLP, dissecting its various components, including interactive objects, interaction interfaces, and interaction methods. We proceed to delve into the evaluation methodologies used in the field, explore its diverse applications, scrutinize its ethical and safety issues, and discuss prospective research directions. This survey serves as an entry point for researchers who are interested in this rapidly evolving area and offers a broad view of the current landscape and future trajectory of iNLP."
 }
 
 @article{zhang2023don,
