--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -145,8 +145,8 @@
     url={https://aclanthology.org/2020.findings-emnlp.159/}, 
     pdf={https://aclanthology.org/2020.findings-emnlp.159.pdf}, 
     code={https://github.com/ShiningLab/Recurrent-Text-Editing}, 
-    poster={Recurrent Inference in Text Editing.pdf}, 
-    slides={Recurrent Inference in Text Editing.pdf}, 
+    poster={Recurrent\ Inference\ in\ Text\ Editing.pdf}, 
+    slides={Recurrent\ Inference\ in\ Text\ Editing.pdf}, 
     title = "Recurrent Inference in Text Editing",
     author = "Shi, Ning  and
       Zeng, Ziheng  and
