--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -130,17 +130,25 @@
 }
 
 @inproceedings{shi21_interspeech,
-  author={Ning Shi and Wei Wang and Boxin Wang and Jinfeng Li and Xiangyu Liu and Zhouhan Lin},
-  title={{Incorporating External POS Tagger for Punctuation Restoration}},
-  year=2021,
-  booktitle={Proc. Interspeech 2021},
-  pages={1987--1991},
-  doi={10.21437/Interspeech.2021-1708}
+    selected=true, 
+    abbr={INTERSPEECH}, 
+    bibtex_show={true}, 
+    url={https://www.isca-speech.org/archive/interspeech_2021/shi21_interspeech.html}, 
+    pdf={https://www.isca-speech.org/archive/pdfs/interspeech_2021/shi21_interspeech.pdf}, 
+    code={https://github.com/ShiningLab/POS-Tagger-for-Punctuation-Restoration}, 
+    poster={Incorporating\ External\ POS\ Tagger\ for\ Punctuation\ Restoration.pdf}, 
+    slides={Incorporating\ External\ POS\ Tagger\ for\ Punctuation\ Restoration.pdf}, 
+    author={Ning Shi and Wei Wang and Boxin Wang and Jinfeng Li and Xiangyu Liu and Zhouhan Lin}, 
+    title={{Incorporating External POS Tagger for Punctuation Restoration}}, 
+    year=2021, 
+    booktitle={Proc. Interspeech 2021}, 
+    pages={1987--1991}, 
+    doi={10.21437/Interspeech.2021-1708}
 }
 
 @inproceedings{shi-etal-2020-recurrent,
     selected=true, 
-    abbr={arXiv}, 
+    abbr={EMNLP}, 
     bibtex_show={true}, 
     url={https://aclanthology.org/2020.findings-emnlp.159/}, 
     pdf={https://aclanthology.org/2020.findings-emnlp.159.pdf}, 
