--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
   bibtex_show={true}, 
   url={https://arxiv.org/abs/2305.13246}, 
   pdf={https://arxiv.org/pdf/2305.13246.pdf}, 
-  code="https://github.com/InteractiveNLP-Team/awesome-InteractiveNLP-papers", 
+  code={https://github.com/InteractiveNLP-Team/awesome-InteractiveNLP-papers}, 
   title={Interactive natural language processing}, 
   author={Wang, Zekun and Zhang, Ge and Yang, Kexin and Shi, Ning and Zhou, Wangchunshu and Hao, Shaochun and Xiong, Guangzheng and Li, Yizhi and Sim, Mong Yuan and Chen, Xiuying and others}, 
   journal={arXiv preprint arXiv:2305.13246}, 
@@ -15,28 +15,57 @@
   abstract="Interactive Natural Language Processing (iNLP) has emerged as a novel paradigm within the field of NLP, aimed at addressing limitations in existing frameworks while aligning with the ultimate goals of artificial intelligence. This paradigm considers language models as agents capable of observing, acting, and receiving feedback iteratively from external entities. Specifically, language models in this context can: (1) interact with humans for better understanding and addressing user needs, personalizing responses, aligning with human values, and improving the overall user experience; (2) interact with knowledge bases for enriching language representations with factual knowledge, enhancing the contextual relevance of responses, and dynamically leveraging external information to generate more accurate and informed responses; (3) interact with models and tools for effectively decomposing and addressing complex tasks, leveraging specialized expertise for specific subtasks, and fostering the simulation of social behaviors; and (4) interact with environments for learning grounded representations of language, and effectively tackling embodied tasks such as reasoning, planning, and decision-making in response to environmental observations. This paper offers a comprehensive survey of iNLP, starting by proposing a unified definition and framework of the concept. We then provide a systematic classification of iNLP, dissecting its various components, including interactive objects, interaction interfaces, and interaction methods. We proceed to delve into the evaluation methodologies used in the field, explore its diverse applications, scrutinize its ethical and safety issues, and discuss prospective research directions. This survey serves as an entry point for researchers who are interested in this rapidly evolving area and offers a broad view of the current landscape and future trajectory of iNLP."
 }
 
-@article{zhang2023don,
-  title={Don't Trust GPT When Your Question Is Not In English},
-  author={Zhang, Xiang and Li, Senyu and Hauer, Bradley and Shi, Ning and Kondrak, Grzegorz},
-  journal={arXiv preprint arXiv:2305.16339},
-  year={2023}
+@article{zhang2023don, 
+    selected=false, 
+    abbr={arXiv}, 
+    bibtex_show={true}, 
+    url={https://arxiv.org/abs/2305.16339}, 
+    pdf={https://arxiv.org/pdf/2305.16339.pdf}, 
+    title={Don't Trust GPT When Your Question Is Not In English}, 
+    author={Zhang, Xiang and Li, Senyu and Hauer, Bradley and Shi, Ning and Kondrak, Grzegorz}, 
+    journal={arXiv preprint arXiv:2305.16339}, 
+    year={2023}, 
+    abstract="Large Language Models (LLMs) have demonstrated exceptional natural language understanding abilities and have excelled in a variety of natural language processing (NLP)tasks in recent years. Despite the fact that most LLMs are trained predominantly in English, multiple studies have demonstrated their comparative performance in many other languages. However, fundamental questions persist regarding how LLMs acquire their multi-lingual abilities and how performance varies across different languages. These inquiries are crucial for the study of LLMs since users and researchers often come from diverse language backgrounds, potentially influencing their utilization and interpretation of LLMs' results. In this work, we propose a systematic way of qualifying the performance disparities of LLMs under multilingual settings. We investigate the phenomenon of across-language generalizations in LLMs, wherein insufficient multi-lingual training data leads to advanced multi-lingual capabilities. To accomplish this, we employ a novel back-translation-based prompting method. The results show that GPT exhibits highly translating-like behaviour in multilingual settings."
 }
 
 @article{chen2023adversarial,
-  title={From adversarial arms race to model-centric evaluation: Motivating a unified automatic robustness evaluation framework},
-  author={Chen, Yangyi and Gao, Hongcheng and Cui, Ganqu and Yuan, Lifan and Kong, Dehan and Wu, Hanlu and Shi, Ning and Yuan, Bo and Huang, Longtao and Xue, Hui and others},
-  journal={arXiv preprint arXiv:2305.18503},
-  year={2023}
+    selected=false, 
+    abbr={arXiv}, 
+    bibtex_show={true}, 
+    url={https://arxiv.org/abs/2305.18503}, 
+    pdf={https://arxiv.org/pdf/2305.18503.pdf}, 
+    code={https://github.com/thunlp/RobTest}, 
+    title={From adversarial arms race to model-centric evaluation: Motivating a unified automatic robustness evaluation framework}, 
+    author={Chen, Yangyi and Gao, Hongcheng and Cui, Ganqu and Yuan, Lifan and Kong, Dehan and Wu, Hanlu and Shi, Ning and Yuan, Bo and Huang, Longtao and Xue, Hui and others}, 
+    journal={arXiv preprint arXiv:2305.18503}, 
+    year={2023}, 
+    abstract="Textual adversarial attacks can discover models' weaknesses by adding semantic-preserved but misleading perturbations to the inputs. The long-lasting adversarial attack-and-defense arms race in Natural Language Processing (NLP) is algorithm-centric, providing valuable techniques for automatic robustness evaluation. However, the existing practice of robustness evaluation may exhibit issues of incomprehensive evaluation, impractical evaluation protocol, and invalid adversarial samples. In this paper, we aim to set up a unified automatic robustness evaluation framework, shifting towards model-centric evaluation to further exploit the advantages of adversarial attacks. To address the above challenges, we first determine robustness evaluation dimensions based on model capabilities and specify the reasonable algorithm to generate adversarial samples for each dimension. Then we establish the evaluation protocol, including evaluation settings and metrics, under realistic demands. Finally, we use the perturbation degree of adversarial samples to control the sample validity. We implement a toolkit RobTest that realizes our automatic robustness evaluation framework. In our experiments, we conduct a robustness evaluation of RoBERTa models to demonstrate the effectiveness of our evaluation framework, and further show the rationality of each component in the framework. The code will be made public at \url{this https URL}."
 }
 
 @article{ogezi2023ualberta,
-  title={UAlberta at SemEval-2023 Task 1: Context Augmentation and Translation for Multilingual Visual Word Sense Disambiguation},
-  author={Ogezi, Michael and Hauer, Bradley and Omarov, Talgat and Shi, Ning and Kondrak, Grzegorz},
-  journal={arXiv preprint arXiv:2306.14067},
-  year={2023}
+    selected=false, 
+    abbr={arXiv}, 
+    bibtex_show={true}, 
+    url={https://arxiv.org/abs/2306.14067}, 
+    pdf={https://arxiv.org/pdf/2306.14067.pdf}, 
+    code={https://github.com/UAlberta-NLP/v-wsd}, 
+    poster={UAlberta\ at\ SemEval\ 2023\ Task\ 1\ Context\ Augmentation\ and\ Translation\ for\ Visual\ WSD.pdf}, 
+    title={UAlberta at SemEval-2023 Task 1: Context Augmentation and Translation for Multilingual Visual Word Sense Disambiguation}, 
+    author={Ogezi, Michael and Hauer, Bradley and Omarov, Talgat and Shi, Ning and Kondrak, Grzegorz}, 
+    journal={arXiv preprint arXiv:2306.14067}, 
+    year={2023}, 
+    abstract="We describe the systems of the University of Alberta team for the SemEval-2023 Visual Word Sense Disambiguation (V-WSD) Task. We present a novel algorithm that leverages glosses retrieved from BabelNet, in combination with text and image encoders. Furthermore, we compare language-specific encoders against the application of English encoders to translated texts. As the contexts given in the task datasets are extremely short, we also experiment with augmenting these contexts with descriptions generated by a language model. This yields substantial improvements in accuracy. We describe and evaluate additional V-WSD methods which use image generation and text-conditioned image segmentation. Overall, the results of our official submission rank us 18 out of 56 teams. Some of our unofficial results are even better than the official ones. Our code is publicly available at this https URL."
 }
 
 @inproceedings{zhang-etal-2023-bridging,
+    selected=false, 
+    abbr={EACL}, 
+    bibtex_show={true}, 
+    url={https://aclanthology.org/2023.eacl-main.205/}, 
+    pdf={https://aclanthology.org/2023.eacl-main.205.pdf}, 
+    code={https://github.com/senseAlign/BabelNet_2_HowNet}, 
+    poster={Bridging\ the\ Gap\ Between\ BabelNet\ and\ HowNet\ Unsupervised\ Sense\ Alignment\ and\ Sememe\ Prediction.pdf}, 
+    slides={Bridging\ the\ Gap\ Between\ BabelNet\ and\ HowNet\ Unsupervised\ Sense\ Alignment\ and\ Sememe\ Prediction.pdf}, 
     title = "Bridging the Gap Between {B}abel{N}et and {H}ow{N}et: Unsupervised Sense Alignment and Sememe Prediction",
     author = "Zhang, Xiang  and
       Shi, Ning  and
@@ -53,6 +82,13 @@
 }
 
 @inproceedings{shi-etal-2022-revisit,
+    selected=true, 
+    abbr={BlackboxNLP}, 
+    bibtex_show={true}, 
+    url={https://aclanthology.org/2022.blackboxnlp-1.6/}, 
+    pdf={https://aclanthology.org/2022.blackboxnlp-1.6.pdf}, 
+    code={https://github.com/ShiningLab/Systematic-Generalization-via-Meaningful-Learning}, 
+    poster={Revisit\ Systematic\ Generalization\ via\ Meaningful\ Learning.pdf}, 
     title = "Revisit Systematic Generalization via Meaningful Learning",
     author = "Shi, Ning  and
       Wang, Boxin  and
@@ -70,6 +106,14 @@
 }
 
 @inproceedings{shi-etal-2022-text,
+    selected=true, 
+    abbr={EMNLP}, 
+    bibtex_show={true}, 
+    url={https://aclanthology.org/2022.findings-emnlp.114/}, 
+    pdf={https://aclanthology.org/2022.findings-emnlp.114.pdf}, 
+    code={https://github.com/ShiningLab/Text-Editing-as-Imitation-Game}, 
+    poster={Text\ Editing\ as\ Imitation\ Game.pdf}, 
+    slides={Text\ Editing\ as\ Imitation\ Game.pdf}, 
     title = "Text Editing as Imitation Game",
     author = "Shi, Ning  and
       Tang, Bin  and
@@ -89,6 +133,12 @@
 }
 
 @inproceedings{zhang-etal-2022-rochbert,
+    selected=false, 
+    abbr={EMNLP}, 
+    bibtex_show={true}, 
+    url={https://aclanthology.org/2022.findings-emnlp.256/}, 
+    pdf={https://aclanthology.org/2022.findings-emnlp.256.pdf}, 
+    code={https://github.com/zzh-z/RoChBERT}, 
     title = "{R}o{C}h{B}ert: Towards Robust {BERT} Fine-tuning for {C}hinese",
     author = "Zhang, Zihan  and
       Li, Jinfeng  and
@@ -110,6 +160,14 @@
 }
 
 @inproceedings{wang-etal-2021-counterfactual-adversarial,
+    selected=false, 
+    abbr={EMNLP}, 
+    bibtex_show={true}, 
+    url={https://aclanthology.org/2021.findings-emnlp.413/}, 
+    pdf={https://aclanthology.org/2021.findings-emnlp.413.pdf}, 
+    code={https://github.com/ShiningLab/CAT}, 
+    poster={Counterfactual\ Adversarial\ Learning\ with\ Representation\ Interpolation.pdf}, 
+    slides={Counterfactual\ Adversarial\ Learning\ with\ Representation\ Interpolation.pdf}, 
     title = "Counterfactual Adversarial Learning with Representation Interpolation",
     author = "Wang, Wei  and
       Wang, Boxin  and
@@ -143,7 +201,8 @@
     year=2021, 
     booktitle={Proc. Interspeech 2021}, 
     pages={1987--1991}, 
-    doi={10.21437/Interspeech.2021-1708}
+    doi={10.21437/Interspeech.2021-1708}, 
+    abstract="Punctuation restoration is an important post-processing step in automatic speech recognition. Among other kinds of external information, part-of-speech (POS) taggers provide informative tags, suggesting each input token’s syntactic role, which has been shown to be beneficial for the punctuation restoration task. In this work, we incorporate an external POS tagger and fuse its predicted labels into the existing language model to provide syntactic information. Besides, we propose sequence boundary sampling (SBS) to learn punctuation positions more efficiently as a sequence tagging task. Experimental results show that our methods can consistently obtain performance gains and achieve a new state-of-the-art on the common IWSLT benchmark. Further ablation studies illustrate that both large pre-trained language models and the external POS tagger take essential parts to improve the model’s performance."
 }
 
 @inproceedings{shi-etal-2020-recurrent,
