--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -50,6 +50,7 @@
     pdf={https://arxiv.org/pdf/2306.14067.pdf}, 
     code={https://github.com/UAlberta-NLP/v-wsd}, 
     poster={UAlberta\ at\ SemEval\ 2023\ Task\ 1\ Context\ Augmentation\ and\ Translation\ for\ Visual\ WSD.pdf}, 
+    slides={UAlberta\ at\ SemEval\ 2023\ Task\ 1\ Context\ Augmentation\ and\ Translation\ for\ Visual\ WSD.pdf}, 
     title={UAlberta at SemEval-2023 Task 1: Context Augmentation and Translation for Multilingual Visual Word Sense Disambiguation}, 
     author={Ogezi, Michael and Hauer, Bradley and Omarov, Talgat and Shi, Ning and Kondrak, Grzegorz}, 
     journal={arXiv preprint arXiv:2306.14067}, 
