--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -216,7 +216,6 @@
     selected=true, 
     abbr={INTERSPEECH}, 
     bibtex_show={true}, 
-    url={https://www.isca-speech.org/archive/interspeech_2021/shi21_interspeech.html}, 
     pdf={https://www.isca-speech.org/archive/pdfs/interspeech_2021/shi21_interspeech.pdf}, 
     code={https://github.com/ShiningLab/POS-Tagger-for-Punctuation-Restoration}, 
     poster={Incorporating\ External\ POS\ Tagger\ for\ Punctuation\ Restoration.pdf}, 
@@ -226,6 +225,7 @@
     year=2021, 
     booktitle={Proc. Interspeech 2021}, 
     pages={1987--1991}, 
+    url={https://www.isca-speech.org/archive/interspeech_2021/shi21_interspeech.html}, 
     doi={10.21437/Interspeech.2021-1708}, 
     abstract="Punctuation restoration is an important post-processing step in automatic speech recognition. Among other kinds of external information, part-of-speech (POS) taggers provide informative tags, suggesting each input token’s syntactic role, which has been shown to be beneficial for the punctuation restoration task. In this work, we incorporate an external POS tagger and fuse its predicted labels into the existing language model to provide syntactic information. Besides, we propose sequence boundary sampling (SBS) to learn punctuation positions more efficiently as a sequence tagging task. Experimental results show that our methods can consistently obtain performance gains and achieve a new state-of-the-art on the common IWSLT benchmark. Further ablation studies illustrate that both large pre-trained language models and the external POS tagger take essential parts to improve the model’s performance."
 }
@@ -234,7 +234,7 @@
     selected=true, 
     abbr={EMNLP Findings}, 
     bibtex_show={true}, 
-    url={https://aclanthology.org/2020.findings-emnlp.159/}, 
+    arxiv={https://arxiv.org/abs/2009.12643}, 
     pdf={https://aclanthology.org/2020.findings-emnlp.159.pdf}, 
     code={https://github.com/ShiningLab/Recurrent-Text-Editing}, 
     poster={Recurrent\ Inference\ in\ Text\ Editing.pdf}, 
