--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -234,7 +234,7 @@
     selected=true, 
     abbr={EMNLP Findings}, 
     bibtex_show={true}, 
-    arxiv={https://arxiv.org/abs/2009.12643}, 
+    arxiv={2009.12643}, 
     pdf={https://aclanthology.org/2020.findings-emnlp.159.pdf}, 
     code={https://github.com/ShiningLab/Recurrent-Text-Editing}, 
     poster={Recurrent\ Inference\ in\ Text\ Editing.pdf}, 
